Video 3: inputLayer & outputLayer

--- a/NeuralNetwork_intro/NeuralNetwork_intro.vcxproj
+++ b/NeuralNetwork_intro/NeuralNetwork_intro.vcxproj
@@ -115,8 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="OutputLayer.h" />
+    <ClInclude Include="InputLayer.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="Neuron.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
